--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -93,7 +93,7 @@ Although they are going to be used with the framework, they should be designed t
 
 This objective is in particular relevant as it is a practical application of the rather theoretical framework and recommender engines. Whereas the recommender engines may be somewhat simple, it is important that the demo application is complex enough to be a good example for an integration. Henceforth, an existing, open-source e-commerce application shall be used as demo application.
 
-This objective is going to contribute significantly to the evaluation of the ease of integration property of the framework. The size and complexity of the integration source code are a good indicator in this case.
+This objective is going to contribute significantly to the evaluation of the ease of integration property of the framework. The size and complexity of the integration source code are a good indicator in this case. A potential negative indicator is performance; the integration should not considerably block the domain application.
 
 \section{Structure of the Report}
 
